--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <div class="warning">
+        <div class="hide-warning">
             <div>
                 <i class="ph ph-warning-circle ph-fill"></i>
                 <span>O item foi removido da lista</span>
