--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
+        <script src="main.js" defer></script>
     <title>QuickList Kauemm09</title>
 </head>
 
@@ -28,10 +31,10 @@
     <main>
         <section class="add-item">
             <input type="text" placeholder="Adicione um novo item" id="item">
-            <button>Adicionar item</button>
+            <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section class="list"> 
+        <section class="list">
             <div class="item">
                 <div>
                     <input type="checkbox" name="list" id="item-1">
@@ -79,7 +82,7 @@
             </div>
             <button>
                 <i class="ph ph-x"></i>
-            </button> 
+            </button>
         </div>
     </main>
 </body>
